@@ -88,7 +88,6 @@ API Reference - webapp2_extras
    api/webapp2_extras/json.rst
    api/webapp2_extras/local.rst
    api/webapp2_extras/mako.rst
-   api/webapp2_extras/protorpc.rst
    api/webapp2_extras/routes.rst
    api/webapp2_extras/securecookie.rst
    api/webapp2_extras/security.rst
@@ -137,7 +136,6 @@ Indices and tables
    api/extras.local.rst
    api/extras.local_app.rst
    api/extras.mako.rst
-   api/extras.protorpc.rst
    api/extras.routes.rst
    api/extras.securecookie.rst
    api/extras.security.rst
